SERVER-35454 Make MatchExpression parser fail cleanly on $type:0.

Also, improves the error message for $type:"missing".